<resources>
    <string name="app_name">Takeable Items</string>
    <!-- Strings used for fragments for navigation -->
    <string name="list_fragment_label">Список предметов</string>
    <string name="detail_fragment_label">Детали</string>
    <string name="add_fragment_label">Добавить</string>
    <string name="takeable_item_label">Предмет</string>
    <string name="takeable_item_count_label">Количество</string>
    <string name="save">Сохранить</string>
    <string name="delete">Удалить</string>
    <string name="yours_sets">Ваши наборы</string>
    <string name="add_set_label">Добавление набора</string>
    <string name="set_title_of_set_label">Название набора</string>
    <string name="edit_button">Переименовать</string>
    <string name="remove_button">Удалить</string>
    <string name="items_count">%1$d шт.</string>
    <string name="add_set_button">Добавить набор</string>
    <string name="add_button_content_description">Кнопка добавления</string>
    <string name="ic_item_counter_description">Иконка количества предметов</string>
    <string name="edit_button_content_description">Кнопка редактирования предмета</string>

</resources>
